--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "reset-css": "*"
   }
 }
