:construction:editing HTML structure

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "reset-css": "*"
+    "reset-css": "*",
+    "slick-carousel": "^1.8.1"
   }
 }
