--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "reset-css": "*",
-    "slick-carousel": "^1.8.1"
+    "reset-css": "*"
   }
 }
